# RXMesh

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/Geodesic/: geodesic.cu  geodesic_kernel.cuh  geodesic_ptp_openmesh.h  geodesic_ptp_rxmesh.h
apps/MassSpring/: CMakeLists.txt  float33.h  mass_spring.cu  mass_spring_kernel.cuh
apps/VertexNormal/: benchmark.sh  vertex_normal.cu
apps/patch/: CMakeLists.txt
bx2k/: render_patch.py
include/rxmesh/: rxmesh.h
